<resources>
    <string name="app_name">Edvora</string>
    <string name="edvora">Edvora</string>
    <string name="ride_id">Ride Id:</string>
    <string name="origin_station">Origin Station:</string>
    <string name="station_path">Station Path:</string>
    <string name="distance">Distance:</string>
    <string name="date">Date:</string>
    <string name="rides">Rides:</string>
    <string name="filter">Filter</string>
</resources>