<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bkg"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/topBar_bkg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/edvora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/edvora"
                android:textSize="28sp" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/circular_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                app:civ_border="false"
                tools:src="@tools:sample/avatars">

            </com.mikhaellopez.circularimageview.CircularImageView>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/circular_img"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                tools:text="Dhruv Singh" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/inter_light"
                android:text="@string/rides"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="11dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ic_filter"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_filter" />

                <TextView
                    android:id="@+id/filter_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_filter"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/filter"
                    android:textSize="14sp" />
            </RelativeLayout>


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tab_layout">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>