<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_bkg"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
   >

        <androidx.cardview.widget.CardView
            android:id="@+id/image_view_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp"
            >

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"/>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/city_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_layout">

            <RelativeLayout
                android:id="@+id/city_layout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/city_state_bkg"
                android:padding="10dp">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/state_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_toEndOf="@id/city_layout"
                android:background="@drawable/city_state_bkg"
                android:padding="10dp">

                <TextView
                    android:id="@+id/state_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>




        <TextView
            android:id="@+id/ride_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/ride_id"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_state"
             />

        <TextView
            android:id="@+id/ride_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@id/city_state"
            app:layout_constraintStart_toEndOf="@id/ride_id_tv"
            />

        <TextView
            android:id="@+id/origin_station_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:text="@string/origin_station"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_id_tv"
            />
        <TextView
            android:id="@+id/origin_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="2dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintStart_toEndOf="@id/origin_station_tv"
            app:layout_constraintTop_toBottomOf="@id/ride_id_tv"
            />

        <RelativeLayout
            android:id="@+id/st_path_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/origin_station_tv"
            >

            <TextView
                android:id="@+id/station_path_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/station_path"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/station_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_regular"
                android:textSize="18sp"
                android:layout_toEndOf="@id/station_path_tv"
                />

        </RelativeLayout>


        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/st_path_layout"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@id/st_path_layout"
            app:layout_constraintStart_toEndOf="@id/date_tv"
             />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:text="@string/distance"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_tv"
            />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@id/date_tv"
            app:layout_constraintStart_toEndOf="@id/distance_tv"
             />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>